BORDER attribute with the IMG tag, using percentage values not working. https://bugs.webkit.org/show_bug.cgi?id=20226

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-07-22
Reviewed by Simon Fraser.

When border presentational attribute of image element has % in it, it should be parsed using
HTML parser rules. In this case, the algorithm is the one used described in:
http://www.whatwg.org/specs/web-apps/current-work/#rules-for-parsing-non-negative-integers

Source/WebCore:

* html/HTMLImageElement.cpp:
(WebCore::parseBorderWidthAttribute):
(WebCore::HTMLImageElement::parseMappedAttribute):
* html/parser/HTMLParserIdioms.cpp:
(WebCore::parseHTMLNonNegativeInteger):
* html/parser/HTMLParserIdioms.h:

LayoutTests:

* fast/images/border-expected.txt:
* fast/images/script-tests/border.js:

Canonical link: https://commits.webkit.org/80783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91601 268f45cc-cd09-0410-ab3c-d52691b4dbfc